day5/10-sample-pod-with-secret.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod-with-a-secret
spec:
  containers:
    - name: my-container
      image: busybox
      command: ["sleep", "infinity"]
