day5/21-cimple-back-deployment-v3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cimple-back-deployment
  labels:
    app: cimple-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cimple-back
  template:
    metadata:
      name: cimple-back
      labels:
        app: cimple-back
    spec:
      serviceAccountName: backend-sa
      volumes:
        - name: config-data
          configMap:
            name: cimple-back-config
        - name: cimple-back-templates
          configMap:
            name: cimple-back-templates
        - name: logs
          emptyDir: {}
      containers:
        - name: cimple-back
          image: taksan/cimple-back:v3
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: logs
              mountPath: /app/logs
            - name: cimple-back-templates
              mountPath: /app/templates

          startupProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /health
              port: http
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            failureThreshold: 30
            periodSeconds: 10
        - name: cimple-eviewer-collector
          image: taksan/cimple-eviewer-collector:v1
          volumeMounts:
            - name: logs
              mountPath: /app/logs
            - name: config-data
              mountPath: /opt/
