day5/cimple-store-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cimple-store-deployment
  labels:
    app: cimple-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cimple-store
  template:
    metadata:
      name: cimple-store
      labels:
        app: cimple-store
    spec:
      containers:
      - name: cimple-store
        image: taksan/cimple-store:v1
        ports:
        - containerPort: 8001
          name: http
