day5/pod-with-secret.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
    - name: my-container
      image: busybox
      command:
        - sh
        - -c
        - |
          sleep infinity
