day5/sample-pod-manual-pvc.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-manual-pvc
spec:
  volumes:
    - name: sample-volume
      persistentVolumeClaim:
        claimName: manual-sample-pvc
  containers:
    - name: main
      image: bitnami/kubectl
      command: ["/bin/sh", "-c"]
      args: [ "sleep infinity" ]
      volumeMounts:
        - name: sample-volume
          mountPath: /mnt
