day5/sample-pod-with-config-map-single-key.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-configmap-single-key
spec:
  containers:
    - name: example-container
      image: busybox
      command: ['sleep', 'infinity']
      volumeMounts:
        - name: config-volume
          mountPath: /etc/config/config.json
          subPath: config.json
  volumes:
    - name: config-volume
      configMap:
        name: example-config
