day5/sample-pod-with-multiple-secrets.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod-with-multiple-secrets
spec:
  containers:
    - name: my-container
      image: busybox
      command: ["sleep", "infinity"]
