day5/trial-and-error-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: trial-and-error
spec:
  serviceAccountName: backend-sa
  containers:
    - name: main
      image: bitnami/kubectl
      command: ["/bin/sh", "-c"]
      args: [ "sleep infinity" ]
