day5/2-cimple-store-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cimple-store
spec:
  selector:
    app: cimple-store
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
