day5/cimple-store-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cimple-store
spec:
  type: NodePort
  selector:
    app: cimple-store
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
